# mcp

./: CLAUDE.md  README.md  mcp.py  pyproject.toml
.github/workflows/: main.yml  publish.yml
json2types/: generator.py
scripts/: check
src/json2types/: pyproject.toml
src/json2types/json2types/: __init__.py  __main__.py  generator.py
src/mcp-client/: pyproject.toml
src/mcp-client/mcp_client/: __init__.py
src/mcp-types/: pyproject.toml
src/mcp-types/mcp_types/: __init__.py
src/mcplette/: README.md  __init__.py  applications.py  pyproject.toml  routing.py
src/mcplette/mcplette/: __init__.py  _context.py  applications.py  routing.py
src/mcplette/mcplette/_function_schema/: __init__.py  _griffe.py  _json_schema.py  _utils.py
src/mcplette/src/mcplette/: applications.py  middleware.py  routing.py
tests/: test_cli.py  test_mcp_types.py  test_types.py
tests/json2types/: test_types.py
tests/mcplette/: test_applications.py  test_routing.py
