[project]
name = "monorepo"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = ["json2types", "mcp-types", "mcplette"]

[tool.uv.sources]
json2types = { workspace = true }
mcp-types = { workspace = true }
mcplette = { workspace = true }

[tool.uv.workspace]
members = ["src/json2types", "src/mcp-types", "src/mcplette"]

[tool.uv]
package = false
required-version = ">=0.8.4"

[dependency-groups]
dev = [
    "httpx",
    "inline-snapshot>=0.27.2",
    "pyright",
    "pytest",
    "ruff",
    "uvicorn",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I"]

[tool.pyright]
typeCheckingMode = "strict"

[tool.inline-snapshot]
format-command = ""
