[project]
name = "monorepo"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "json2types",
    "mcp-types",
    "mcplette",
]

[dependency-groups]
dev = [
    "httpx",
    "inline-snapshot>=0.27.2",
    "pyright",
    "pytest",
    "ruff",
]

[tool.uv.sources]
json2types = { workspace = true }
mcp-types = { workspace = true }
mcplette = { workspace = true }

[tool.uv.workspace]
members = [
    "src/json2types",
    "src/mcp-types",
    "src/mcplette",
    "src/mcp-client",
]

[tool.uv]
package = false
required-version = ">=0.8.4"

[tool.ruff]
line-length = 120
include = [
    "src/json2types/**/*.py",
    "src/mcp-types/**/*.py",
    "src/mcplette/**/*.py",
    "src/mcp-client/**/*.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "FA"]
ignore = ["B904", "B028", "F841", "E741"]

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = false

[tool.pyright]
typeCheckingMode = "strict"
include = [
    "src/json2types",
    "src/mcp-types",
    "src/mcplette",
    "src/mcp-client",
]

[tool.inline-snapshot]
format-command = ""
