[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "json2types"
version = "0.1.0"
description = "Generate Python TypedDict types from JSON Schema"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pydantic==2.11.7"]

[project.scripts]
json2types = "json2types.cli:main"
