[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true

[project]
name = "mcp-client"
dynamic = ["version"]
description = "The MCP HTTP REST client implementation!"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["httpx", "click"]

[project.scripts]
mcp-client = "mcp_client.cli:main"
