[project]
name = "mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Marcelo Trylesinski", email = "marcelotryle@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
mcp-client = "mcp_client:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
